WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27259
REGRESSION(43559): fast/js/kde/arguments-scope.html fails with interpreter
https://bugs.webkit.org/show_bug.cgi?id=27259
Summary
REGRESSION(43559): fast/js/kde/arguments-scope.html fails with interpreter
Simon Hausmann
Reported
2009-07-14 06:22:38 PDT
After
r43559
the fast/js/kde/arguments-scope.html layout test fails when JavaScriptCore is built without the JIT but the interpreter instead. I used the following standalone testcase during bisection: function test() { if (typeof(arguments) != 'function') print("FAIL") else print("PASS") function arguments() {} } test() If "arguments" is renamed to for example "foo" then it passes.
Attachments
Patch o doom
(1.58 KB, patch)
2009-07-15 02:50 PDT
,
Oliver Hunt
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2009-07-15 02:50:21 PDT
Created
attachment 32773
[details]
Patch o doom
Simon Hausmann
Comment 2
2009-07-15 02:56:38 PDT
Comment on
attachment 32773
[details]
Patch o doom r=me . thanks for quick fix :)
Oliver Hunt
Comment 3
2009-07-15 02:59:40 PDT
Committed
r45903
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug