REGRESSION(43559): fast/js/kde/arguments-scope.html fails with interpreter https://bugs.webkit.org/show_bug.cgi?id=27259

Reviewed by Simon Hausmann

The interpreter was incorrectly basing its need to create the arguments object
based on the presence of the callframe's argument reference rather than the local
arguments reference.  Based on this it then overrode the local variable reference.


Canonical link: https://commits.webkit.org/37533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45903 268f45cc-cd09-0410-ab3c-d52691b4dbfc